--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-qr-code": "^2.0.15",
     "react-router": "^6.28.2",
     "react-router-dom": "^7.1.3",
     "tailwind-merge": "^2.6.0",
