--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.5",
     "@tanstack/react-query": "^5.65.0",
     "axios": "^1.7.9",
     "canvas-confetti": "^1.9.3",
